# livemap

./: CHANGELOG.md  Makefile  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml  manual_deploy.yml
backend/: .pre-commit-config.yaml  Dockerfile  Dockerfile.acceptance  LICENSE.md  MANIFEST.in  Makefile  README.md  instance.yaml  pyproject.toml  setup.py  tox.ini
backend/scripts/: create_site.py
backend/src/livemap/: __init__.py  app.py  asgi.py  configure.zcml  profiles.zcml  testing.py
backend/src/livemap/controlpanel/: configure.zcml
backend/src/livemap/locales/: livemap.pot  update.py
backend/src/livemap/profiles/default/: browserlayer.xml
backend/src/livemap/profiles/default/registry/: plone.base.interfaces.controlpanel.IMailSchema.xml  plone.base.interfaces.controlpanel.ISiteSchema.xml
backend/src/livemap/profiles/uninstall/: browserlayer.xml
backend/src/livemap/serializers/: configure.zcml
backend/src/livemap/setuphandlers/: __init__.py  initial.py
backend/src/livemap/upgrades/: configure.zcml
backend/tests/: conftest.py
backend/tests/setup/: test_setup_install.py  test_setup_uninstall.py
devops/: .env_dist  Makefile  README-GHA.md  README-GITLAB.md  README.md
devops/etc/keys/: plone_prod_deploy_ed25519.pub
devops/inventory/: hosts.yml
devops/stacks/: livemap.glicksoftware.com.yml
frontend/: .eslintrc.js  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  volto.config.js
frontend/src/: LiveMap.jsx  main.jsx  map.css
(+1 files in other folders)
