[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livemap"
version = "1.0.0"
description = "Live map websockets demo"
readme = "README.md"
license = "GPL-2.0"
requires-python = ">=3.12"
authors = [
    { name = "David Glick", email = "david@glicksoftware.com" },
]
keywords = [
    "CMS",
    "Plone",
    "Python",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "a2wsgi",
    "pydantic",
    "starlette",
    "uvicorn[standard]",
]

[project.scripts]
livemap = "livemap.app:main"

[project.urls]
Source = "https://github.com/davisagli/livemap"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.isort]
profile = "plone"

[tool.black]
target-version = ["py312"]

[tool.codespell]
ignore-words-list = "discreet,vew"
skip = "*.po,*.min.js"

[tool.check-manifest]
ignore = [
    ".editorconfig",
    ".flake8",
    ".pre-commit-config.yaml",
    "dependabot.yml",
]
